初始化项目

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,12 @@
 .DS_Store
 node_modules/
-lib/
+examples/
+packages/
+public/
+vue.config.js
+babel.config.js
+*.map
+*.html
 
 # local env files
 .env.local
